--- a/Minesweeper/minesweeper/src/index.css
+++ b/Minesweeper/minesweeper/src/index.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'Calculator';
+  src: url('./assets/fonts/Calculator.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
 }
